mejorando el logo

--- a/index.html
+++ b/index.html
@@ -107,18 +107,18 @@
 
             <h2 class="titulo">Nuestro productos</h2>
             <div class="contenedor-sobre-nosotros">
-                <canvas id="logo" width="450" height="250"></canvas>
+                <canvas id="logo" width="450" height="350"></canvas>
 
                 <!-- <img src="Img/portada.jpg" alt="img-2" class="imagen-about-us"> -->
                 <div class="contenido-textos">
-                    <h3><span>1</span> Los mejores productos</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum esse nulla numquam. Vitae,
-                        mollitia suscipit perspiciatis delectus labore nisi nobis odit reiciendis modi ad sequi
-                        aspernatur at minus odio ex?</p>
-                    <h3><span>2</span> Los mejores productos</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum esse nulla numquam. Vitae,
-                        mollitia suscipit perspiciatis delectus labore nisi nobis odit reiciendis modi ad sequi
-                        aspernatur at minus odio ex?</p>
+                    <h3><span>1</span> Certificado de Actualización </h3>
+                    <p>Es uno de los certificados que se hace constantemente para los vehículos que requieren 
+                        algunos de los datos en la tarjeta de propiedad asi como pesos, medidas, cilindrada, potencia, etc.</p>
+                    <h3><span>2</span> Cambio de Características </h3>
+                    <p>El Cambio de Características lo requieren mucho los carroceros para hacer modificación 
+                        en los camiones asi como ruedas , ejes, medidas, carrocería, el ingeniero certificador le brinda asesoría 
+                        y respaldo en la documentación.
+                    </p>
                 </div>
             </div>
 
@@ -212,14 +212,14 @@
                         <img src="Img/bonificacion.jpg" alt="imagen5">
                         <div class="hover-galeria">
                             <span> <ion-icon name="document-text-outline"></ion-icon> </span>
-                            <p>Bonificación </p>
+                            <p>Certificado de Bonificación </p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="Img/certificado-operatividad.jpg" alt="imagen6">
                         <div class="hover-galeria">
                             <span> <ion-icon name="document-text-outline"></ion-icon> </span>
-                            <p>certificado de operatividad</p>
+                            <p>Certificado de operatividad</p>
                         </div>
                     </div>
                     <div class="imagen-port">
@@ -233,7 +233,7 @@
                         <img src="Img/Prueba-de-opacidad-y-de-gases.jpg" alt="imagen8">
                         <div class="hover-galeria">
                             <span> <ion-icon name="document-text-outline"></ion-icon> </span>
-                            <p>Opacidad</p>
+                            <p>Certificado de Opacidad</p>
                         </div>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
         <div class="contenedor-footer" id="contacto">
             <div class="content-foo">
                 <i class='bx bxs-phone bx-border-circle'></i>
-                <p>943155403</p>
+                <p>999893816</p>
             </div>
             <div class="content-foo">
                 <i class='bx bx-envelope bx-border-circle'></i>
@@ -284,7 +284,7 @@
 
 
         </div>
-        <h2 class="titulo-final">&copy; Erick Yarleque | teléfono: 992269538 </h2>
+        <h5 class="titulo-final">&copy; Erick Yarleque | teléfono: 992269538 </h5>
 
     </footer>
     <!-- esta lineas son para los ionicons  que se puede utilizar en tu página -->
