--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<!---->
+<!--es para hacer comentario-->
 
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
                     </a>
 
                 </li>
-                <!-- <li class="list " style="--clr: #FFA117"> -->
+              
                 <li class="list " style="--clr: #146DF5">
 
                     <a href="#about-services">
@@ -265,8 +265,7 @@
                     <i class='bx bxl-facebook-circle bx-border-circle'></i>
                     <p>
                         <a href="https://www.facebook.com/profile.php?id=61561642672289" target="_blank">
-                            facebook.com
-
+                            Facebook.com
                         </a>
                     </p>
                 </div>
@@ -284,7 +283,7 @@
 
 
         </div>
-        <h5 class="titulo-final">&copy; Erick Yarleque | teléfono: 992269538 </h5>
+        <h5 class="titulo-final">&copy; Erick Yarleque  | teléfono: 992269538 </h5>
 
     </footer>
     <!-- esta lineas son para los ionicons  que se puede utilizar en tu página -->
